--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.3",
-    "oracledb": "^4.2.0"
+    "oracledb": "^4.2.0",
+    "simple-encryptor": "^3.0.0"
   },
   "devDependencies": {},
   "scripts": {
